Fix formatting and complete work

--- a/style.css
+++ b/style.css
@@ -79,3 +79,12 @@ div.tabular-content-padding {
 #info-column-image {
     width: 25%;
 }
+/*
+.footer {
+    bottom: 0;
+    position: absolute;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+}
+*/
